tests/slp3_bad_null_assign.stderr
tests/slp3_bad_null_assign.sl:64:68: error: type mismatch
