tests/slp3_bad_null_assign.sl
import "slang/feature/optional"

pub fn bad() *i32 {
    return null
}
